CVS code -

GNU nano 1.3.12 - 2006.06.26
- General:
	- Miscellaneous comment fixes. (DLR)
	- Implement filename searches in the file browser.  New
	  functions filesearch_init(), findnextfile(),
	  findnextfile_wrap_reset(), filesearch_abort(),
	  do_filesearch(), do_fileresearch(), do_first_file(),
	  do_last_file(), do_help_void(), and do_browser_help(); changes
	  to do_browser(), parse_browser_input(), shortcut_init(),
	  do_help(), and help_init(). (DLR)
	- Open all files in binary mode for consistency and robustness.
	  Changes to load_history() and do_rcfile(). (DLR)
	- Change translator-specific comments in global.c and prompt.c
	  so that they show up in nano.pot, and make them all
	  consistent. (Benno Schulenberg and DLR)
	- Reduce USE_UTF8 to a static bool in chars.c, allow nano.c to
	  set it via a function, and allow winio.c to read its value
	  when needed.  New functions utf8_init() and using_utf8();
	  changes to is_alnum_mbchar(), is_blank_mbchar(),
	  is_cntrl_mbchar(), is_punct_mbchar(), control_mbrep(),
	  mbrep(), mbwidth(), mb_cur_max(), make_mbchar(),
	  parse_mbchar(), mbstrncasecmp(), mbstrcasestr(),
	  mbrevstrcasestr(), mbstrnlen(), mbstrchr(), mbstrpbrk(),
	  mbrevstrpbrk(), has_blank_mbchars(), is_valid_mbstring(),
	  main(), display_string(), and do_credits(). (DLR)
	- Add the ability to use bold text instead of reverse video
	  text, via the -D/--boldtext command line option and the
	  "boldtext" rcfile option.  Changes to browser_refresh(),
	  do_help(), usage(), main(), update_statusbar_prompt(),
	  do_yesno_prompt(), titlebar(), statusbar(), onekey(),
	  edit_draw(), do_replace_highlight(), nano.1, nanorc.5,
	  nano.texi, and nanorc.sample. (DLR, suggested by Benno
	  Schulenberg)
	- Add the ability to use self-contained color syntaxes from
	  separate files, accessible in the nanorc via the "include"
	  command.  New function parse_include(); changes to
	  parse_rcfile(), do_nanorc(), nanorc.5, and nanorc.sample.