@@ -7,7 +7,7 @@
 .\" warranty.
 .\"
 .\" $Id$
-.TH NANORC 5 "version 1.3.12" "May 24, 2006"
+.TH NANORC 5 "version 1.9.99pre1" "June 26, 2006"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .SH NAME
@@ -194,7 +194,7 @@ spaces.  They must be single-column characters.
 .TP
 .B set/unset wordbounds
 Detect word boundaries more accurately by treating punctuation
-characters as part of a word.
+characters as parts of words.
 .TP
 .B syntax "\fIstr\fP" ["\fIfileregex\fP" ... ]
 Defines a syntax named \fIstr\fP which can be activated via the
