@@ -8,7 +8,7 @@
 .\" warranty.
 .\"
 .\" $Id$
-.TH RNANO 1 "version 1.3.12" "May 1, 2006"
+.TH RNANO 1 "version 1.9.99pre1" "June 26, 2006"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .SH NAME
@@ -17,7 +17,7 @@ Pico clone
 
 .SH SYNOPSIS
 .B rnano
-.I [OPTIONS]\ [[\+LINE[,COLUMN]]\ FILE]...
+.I [OPTIONS]\ [[\+LINE,COLUMN]\ FILE]...
 .br
 
 .SH DESCRIPTION
@@ -51,9 +51,10 @@ use backup files or spell checking.
 
 .SH OPTIONS
 .TP
-.B \+\fILINE\fP[,\fICOLUMN\fP]
+.B \+\fILINE\fP,\fICOLUMN\fP
 Places cursor at line number \fILINE\fP and column number \fICOLUMN\fP
-on startup, instead of the default of line 1, column 1.
+(at least one of which must be specified) on startup, instead of the
+default of line 1, column 1.
 .TP
 .B \-?
 Same as \fB-h (\-\-help)\fP.
