@@ -1,4 +1,10 @@
 CVS code -
+- General:
+	- Fix option descriptions.  At least one of the two parts of
+	  +LINE,COLUMN must be specified at all times; COLUMN is not the
+	  only optional value.  Also fix a wording problem in
+	  -W/--wordbounds.  Changes to usage(), nano.1, nanorc.5,
+	  rnano.1, nano.texi, and nanorc.sample.in. (DLR)
 
 GNU nano 1.3.12 - 2006.06.26
 - General:
